# project-forge

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
template/input/: Cargo.toml.chrobry
template/input/src/: main.rs.chrobry
