[package]
name = "project-forge"
version = "1.0.2"
edition = "2021"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Easy CLI tool for creating projects from templates"
license = "MIT"
homepage = "https://github.com/PsichiX/project-forge"
repository = "https://github.com/PsichiX/project-forge"
documentation = "https://docs.rs/project-forge"
readme = "README.md"
exclude = ["template"]

[dependencies]
chrobry-core = "1.0"
clap = { version = "4.5", features = ["derive"] }
fs_extra = "1.3"
zip-extract = "0.1"
